--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
 :root {
   font-family: "Poppins", serif;
   font-style: normal;
+  padding: 40px;
+  display: flex;
+  justify-content: center;
 }
 
 textarea{
